# mim-cli

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-11-meme-cli.md
src/meme_cli/: cli.py  config.py  embeddings.py  models.py  net.py  output.py  saver.py  search.py  store.py
src/meme_cli/providers/: gemini.py  leonardo.py  replicate.py
src/meme_cli/providers/fetch/: giphy.py  openverse.py  pexels.py  pixabay.py  reddit.py  unsplash.py
src/mim_cli/: ai.py  cli.py  config.py  embeddings.py  models.py  output.py  perceptual.py  saver.py  search.py  server.py  store.py
src/mim_cli/providers/: __init__.py  gemini.py  leonardo.py  registry.py  replicate.py
src/mim_cli/providers/fetch/: __init__.py  giphy.py  openverse.py  pexels.py  pixabay.py  reddit.py  unsplash.py
tests/: conftest.py  test_ai.py  test_cli.py  test_embeddings.py  test_fetch_openverse.py  test_fetch_providers.py  test_fetch_reddit.py  test_fetch_video_fallback.py  test_models.py  test_net_safety.py  test_perceptual.py  test_saver.py  test_search.py  test_store.py
