[project]
name = "mim-cli"
version = "0.2.0"
description = "밈 미디어 관리 및 검색 CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pytest>=9.0.3",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "respx>=0.21",
    "imagehash>=4.3",
    "Pillow>=10",
]

[project.scripts]
mim = "mim_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mim_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
